# In-Video_Search

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bio_3_3_th5.pickle  biology_chapter_3_3_treshhold_5.pickle  biology_chapter_3_3_treshhold_5_short.pickle  ch7_soil_agriculture.csv  clip_pipeline.ipynb  compose.yml  data.pickle  data_generation_pipeline.ipynb  data_standard_tokenizer.pickle  data_visualization.ipynb  df_ocr_lava.csv  df_ocr_only.csv  generate.ipynb  main.py  math_1.pickle  package-lock.json  pipeline.ipynb  pyproject.toml  requirements.txt  retrieve_data.ipynb  test_frames_gt.csv  test_frames_gt_new.csv  testing_pipeline.ipynb
app/: app.py  app_helper.py
app/embeddings/: ch7_soil_agriculture.pickle
backend/: app.py  flask.dockerfile  models.py  requirements.txt  routes.py  run.py
backend/src/: data_generation_pipeline.ipynb  retrieve_data.ipynb
backend/src/clip/: clip_model.py  image_utils.py
backend/src/llm/: llama.py
backend/src/ocr/: easy_ocr.py  pytesseract_image_to_text.py
backend/src/text_embedder/: embedder.py
experiments/first_experiment/: df_ocr_only.csv  df_ocr_transcriptions.csv
experiments/second_experiment/: data_generation_pipeline_010724_obsolete.pickle  df_standard_llm_long_summary.csv  test_frames_ch7.csv  test_frames_math1.csv
frontend/: .dockerignore  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: Footer.js  Header.js  Header.module.css  SigninButton.tsx  landing_page.tsx  search_functionality.tsx
notebooks/: whisper-caption.ipynb
src/clip/: clip.py  clip_model.py  clip_pipeline.ipynb  image_dataset.py  image_utils.py  load_clip.py  load_images.py  load_text_classes.py  show_grid_results.py
src/git/: Fine_tune_GIT_on_an_image_captioning_dataset.ipynb  metadata.jsonl  model.py  model_2.py  ms_git_coco.py  video_captioning_experiment.py
src/llm/: llama.ipynb  llama.py
src/ocr/: easy_ocr.py  pytesseract_image_to_text.py
src/text_embedder/: embedder.py
src/video_preprocessing/: clustering_with_hdbscan.py  main.py
streamlit_app/: app.py
(+51 files in other folders)
