[tool.poetry]
name = "afm-vlm"
version = "0.1.0"
description = ""
authors = ["azza <azza.baatout@adesso.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.40.2"
huggingface-hub = "^0.23.0"
torch = "^2.3.0"
image = "^1.5.33"
matplotlib = "^3.8.4"
scikit-image = "^0.23.2"
scikit-learn = "^1.4.2"
hdbscan = { version = "^0.8.33", optional = true }
yt-dlp = "^2024.4.9"
moviepy = "^1.0.3"
pandas = "^2.2.2"
optparse-pretty = "^0.1.1"
pydub = "^0.25.1"
tqdm = "^4.66.4"
black = "^24.4.2"
pre-commit = "^3.7.1"
scenedetect = "^0.6.3"
layoutparser = {extras = ["layoutmodels"], version = "^0.3.4"}
datasets = "^2.19.1"
pickle-secure = "^0.99.9"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
multiprocess = "^0.70.16"
soundfile = "^0.12.1"
librosa = "^0.10.2.post1"
sentencepiece = "^0.2.0"
peft = "^0.11.1"
nltk = "^3.8.1"
ollama = "^0.2.0"
ffmpeg-python = "^0.2.0"
loguru = "^0.7.2"
av = "^12.1.0"
opencv-python-headless = "4.9.0.80"
opencv-python = "4.9.0.80"
ffmpeg = "^1.4"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
jupyter = "^1.0.0"
sentence-transformers = "^3.0.1"
numpy = "1.26.4"


[tool.poetry.extras]
use_hdbscan = ["hdbscan"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
